--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Varela+Round&display=swap" rel="stylesheet">
+    <link rel="icon" href="img/CB.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 
 
@@ -22,7 +24,7 @@
     <div class="main-header mb-5">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#">Coach C. Brown</a>
+                <a class="navbar-brand" href="index.html"><img src="img/CoachC.Brown.png" alt="Coach C. Brown" width="300"></a>
             </nav>
             <h1 class="display-4">EVERYTHING REQUIRED FOR YOUR SUCCESS ALREADY EXISTS</h1>
             <p class="lead mb-4">Within You!</p>
@@ -44,16 +46,18 @@
                     <p class="lead mb-4">A Sexologist and Certified Clinical Sexuality Coach that comes from a background in, believe or not, Criminal Justice! As an Investigator, it was my responsibility to get to the bottom of what’s really going on when attempting to solve a case. I sometimes had to ask the hard questions, and it is with that experience, in addition to the extensive training, provided by the Dr. Rachael Institute that has prepared me to serve people and change lives.
                         <br>My purpose is to empower men and women to exert control over their sexual outcomes by embracing their sexuality and transforming their relationships into one that is positive and healthy.
                     </p>
+                    <!--
                     <div class="col-lg-12 mb-4 social">
                         <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook fa-2x mr-3"></i></a>
                         <a href="https://twitter.com/" target="_blank"><i class="fab fa-linkedin fa-2x mr-3"></i></a>
                         <a href="" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
                     </div>
+-->
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12 quote">
-                    <p class="lead">“The most powerful place you can humanly exist, is in this very moment.”</p>
+                    <p class="lead">“Trust love together and do the work and you will be amazed at your outcome”</p>
                     <p class="quote__name">-Coach C. Brown</p>
                 </div>
             </div>
@@ -61,35 +65,35 @@
     </section>
 
 
-    <!-- HOME ICON SECTION  -->
+    <!-- HOME ICON SECTION -->
     <section id="home-icon-section" class="py-5">
-        <div class="container py-5">
+        <div class="container">
             <div class="row">
-                <div class="col-md-12">
-                    <h4>Coach C. Brown</h4>
-                    <h2>Matchmaker &amp; Relationship Coach</h2>
-                    <div class="border-line"></div>
+                <div class="col-md-12 mb-4">
+                    <h2 class="header">I would love to Coach you into feeling safer and more comfortable reaching your goals:</h2>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 mb-4 text-center icon-1">
-                    <i class="fas fa-user fa-3x mb-3"></i>
-                    <h3>Life Coaching</h3>
-                    <p>Intensify your existence. Clarify your goals, identify the obstacles, then create strategies for overcoming obstacles with effective support, information and guidance.</p>
-                    <button class="btn btn-warning">BOOK APPOINTMENT</button>
+                <div class="col-lg-6 mb-4">
+                    <ul class="lead">
+                        <li>Do you need more full-filling sex in your relationship?</li>
+                        <li>Do you desire to have better communication with your partner which will lead to stronger intimacy?</li>
+                        <li>Would you like to learn about sexual aids and toys to spice up the bedroom?</li>
+                        <li>Would you like to know how to nurture intimacy in the relationship?</li>
+                    </ul>
                 </div>
-                <div class="col-lg-4 mb-4 text-center icon-2">
-                    <i class="fas fa-heart fa-3x mb-3"></i>
-                    <h3>Relationship Coaching</h3>
-                    <p>You will have access to tailored, one-to-one personal development and relationship coaching to help you achieve dating and relationship success.</p>
-                    <button class="btn btn-warning">BOOK APPOINTMENT</button>
+                <div class="col-lg-6 mb-4">
+                    <h3>Here are several sex issues I can Coach you through:</h3>
+                    <ul class="lead">
+                        <li>Mismatched sex drives</li>
+                        <li>Orgasmic difficulty</li>
+                        <li>Intimate connections</li>
+                        <li>Erectile concerns</li>
+                    </ul>
                 </div>
-                <div class="col-lg-4 mb-4 text-center icon-3">
-                    <i class="fas fa-cart-plus fa-3x mb-3"></i>
-                    <h3>Matchmaking</h3>
-                    <p class="third">Since launching Corporate Cupid Renee Brown, has created an exclusive matchmaking agency for professional men and women</p>
-                    <button class="btn btn-warning mt-auto">BOOK APPOINTMENT</button>
+                <div class="col-md-12 text-center">
+                    <h2 class="mb-4">If you can answer “YES” to any of the questions above, Click Below! </h2>
+                    <button class="btn btn-warning">Book Appointment</button>
                 </div>
+
             </div>
         </div>
     </section>
@@ -102,8 +106,8 @@
                 <div class="col-lg-12 py-5">
                     <h2 class="mb-4">Are you ready to take the next step?</h2>
                     <p class="lead mb-4">Book a time or contact me for a confidential consultation.</p>
-                    <button class="btn btn-warning">Free 15 min call</button>
-                    <button class="btn btn-outline-secondary">Contact Me</button>
+                    <button class="btn btn-warning mb-3">Free 15 min call</button>
+                    <button class="btn btn-outline-secondary mb-3">Contact Me</button>
                 </div>
             </div>
         </div>
@@ -111,17 +115,19 @@
 
 
     <!-- TESTIMONIALS SECTION  -->
+    <!--
     <section id="testimonials-section" class="py-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 py-5 testimonial">
                     <h2 class="mb-4">Testimonials</h2>
-                    <p class="lead mb-4">"After my 8-year relationship ended I thought I was doing ok navigating through the dating world on my own. After nearly 18 months of having time by myself and also dating I thought I was doing great. It wasn’t until I opened up to Renee that I realised I still had some blockages and emotionally was probably not available to let that special person into my life. After some coaching sessions with Renee, I switched on the light, realised what I deserved in a relationship and that special person literally stepped into my life. Thank you Renee"</p>
-                    <p class="testimonial-name">Brooke</p>
+                    <p class="lead mb-4"></p>
+                    <p class="testimonial-name"></p>
                 </div>
             </div>
         </div>
     </section>
+-->
 
 
     <!-- CONTACT SECTION  -->
@@ -141,7 +147,7 @@
                         </div>
                         <div class="media-body">
                             <h4 class="media-heading text-grey">Phone:</h4>
-                            <p class="contact-option_text">225-555-5555</p>
+                            <p class="contact-option_text">225-620-3416</p>
                         </div>
                     </div>
                     <div class="media">
@@ -150,18 +156,20 @@
                         </div>
                         <div class="media-body">
                             <h4 class="media-heading text-grey">Email:</h4>
-                            <p class="contact-option_text">renee@reneebrown.com</p>
+                            <p class="contact-option_text">RelationshipCoachCBrown@gmail.com</p>
                         </div>
                     </div>
+                    <!--
                     <div class="media">
                         <div class="media-left">
                             <i class="fas fa-map-marker-alt"></i>
                         </div>
                         <div class="media-body ml-2">
                             <h4 class="media-heading text-grey">Office:</h4>
-                            <p class="contact-option_text">1234 Hidden Dr.</p>
+                            <p class="contact-option_text"></p>
                         </div>
                     </div>
+-->
                 </div>
             </div>
         </div>
@@ -175,11 +183,13 @@
                 <div class="col-sm-6">
                     <button class="btn btn-warning">Book Appointment</button>
                 </div>
+                <!--
                 <div class="col-sm-6 social">
                     <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook fa-2x mr-3"></i></a>
                     <a href="https://twitter.com/" target="_blank"><i class="fab fa-linkedin fa-2x mr-3"></i></a>
                     <a href="" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
                 </div>
+-->
             </div>
 
             <div class="row pt-4">
