--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="col-lg-12 py-5">
                     <h2 class="mb-4">Are you ready to take the next step?</h2>
                     <p class="lead mb-4">Book a time or contact me for a confidential consultation.</p>
-                    <a href="https://calendly.com/relationshipcoachcbrown/15min"><button class="btn btn-warning mb-3">Free 15 min call</button></a>
+                    <a href="https://calendly.com/relationshipcoachcbrown/30min"><button class="btn btn-warning mb-3">Consultation</button></a>
                     <a href="mailto:RelationshipCoachCBrown@gmail.com"><button class="btn btn-outline-secondary mb-3">Contact Me</button></a>
                     
                 </div>
