--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="index.html"><img src="img/CoachC.Brown.png" alt="Coach C. Brown" width="300"></a>
             </nav>
-            <h1 class="display-4">“Be your own kind of beautiful.”</h1>
-            <p class="lead mb-4">-Jason Gray</p>
+            <h1 class="display-4">“A good coach can change a game. A great coach can change a life.”</h1>
+            <p class="lead mb-4">-John Wooden</p>
             <a href="https://calendly.com/relationshipcoachcbrown/15min"><button class="btn btn-warning">Book Appointment</button></a>
             <a href="mailto:RelationshipCoachCBrown@gmail.com"><button class="btn btn-outline-secondary">Contact Me</button></a>
         </div>
@@ -43,7 +43,7 @@
                 </div>
                 <div class="col-lg-6 text-center section-a">
                     <h1 class="mb-4">Meet Coach C. Brown</h1>
-                    <p class="lead mb-4">A Sexologist and Certified Clinical Sexuality Coach that comes from a background in, believe or not, Criminal Justice! As an Investigator, it was my responsibility to get to the bottom of what’s really going on when attempting to solve a case. I sometimes had to ask the hard questions, and it is with that experience, in addition to the extensive training, provided by the Dr. Rachael Institute that has prepared me to serve people and change lives.
+                    <p class="lead mb-4">A Sexologist and Certified Clinical Sexuality Coach that comes from a background in, believe or not, Criminal Justice! As an Investigator, it was my responsibility to get to the bottom of what’s really going on when attempting to solve a case. I sometimes had to ask the hard questions, and it is with that experience, in addition to the extensive training, provided by The Dr. Rachael Institute that has prepared me to serve people and change lives.
                         <br>My purpose is to empower men and women to exert control over their sexual outcomes by embracing their sexuality and transforming their relationships into one that is positive and healthy.
                     </p>
                     <!--
@@ -57,7 +57,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12 quote">
-                    <p class="lead">“Trust love together and do the work and you will be amazed at your outcome”</p>
+                    <p class="lead">“Trust love together and do the work. You will be amazed with your outcome.”</p>
                     <p class="quote__name">-Coach C. Brown</p>
                 </div>
             </div>
@@ -90,7 +90,7 @@
                     </ul>
                 </div>
                 <div class="col-md-12 text-center">
-                    <h2 class="mb-4">If you can answer “YES” to any of the questions above, Click Below! </h2>
+                    <h2 class="mb-4">If you answer “YES” to any of the questions above, Click Below! </h2>
                     <a href="https://calendly.com/relationshipcoachcbrown/15min"><button class="btn btn-warning">Book Appointment</button></a>
                 </div>
 
@@ -104,10 +104,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 py-5">
-                    <h2 class="mb-4">Are you ready to take the next step?</h2>
+                    <h2 class="mb-4">Allow me to coach you, let's start today.</h2>
                     <p class="lead mb-4">Book a time or contact me for a confidential consultation.</p>
                     <a href="https://calendly.com/relationshipcoachcbrown/30min"><button class="btn btn-warning mb-3">Consultation</button></a>
-                    <a href="mailto:RelationshipCoachCBrown@gmail.com"><button class="btn btn-outline-secondary mb-3">Contact Me</button></a>
+                    <a href="mailto:RelationshipCoachCBrown@gmail.com"><button class="btn btn-warning mb-3">Contact Me</button></a>
                     
                 </div>
             </div>
@@ -122,7 +122,7 @@
                 <div class="col-md-6 pl-4">
 
                     <div class="contact-header">
-                        <h1 class="mb-2">Don’t Hesitate To Contact Me.</h1>
+                        <h1 class="mb-2">Have a quetion? Don’t Hesitate To Contact Me.</h1>
                         <h4 class="text-grey mb-5">Have a question? Get in touch now!</h4>
                     </div>
 
