--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12 quote">
-                    <p class="lead">“Trust love together and do the work. You will be amazed with your outcome.”</p>
+                    <p class="lead">“You will be amazed with your outcome if you trust love together and do the work.”</p>
                     <p class="quote__name">-Coach C. Brown</p>
                 </div>
             </div>
