--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                 <div class="col-md-6 pl-4">
 
                     <div class="contact-header">
-                        <h1 class="mb-2">Have a quetion? Don’t Hesitate To Contact Me.</h1>
-                        <h4 class="text-grey mb-5">Have a question? Get in touch now!</h4>
+                        <h1 class="mb-2">Have a question? Don’t Hesitate To Contact Me.</h1>
+                        <h4 class="text-grey mb-5">Get in touch now!</h4>
                     </div>
 
                     <div class="media">
