--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="col-lg-6 text-center section-a">
                     <h1 class="mb-4">Meet Coach C. Brown</h1>
-                    <p class="lead mb-4">A Sexologist and Certified Clinical Sexuality Coach that comes from a background in, believe or not, Criminal Justice! As an State Criminal Investigator, it was my responsibility to get to the bottom of what was really going on when attempting to solve a case. I sometimes had to ask the hard questions, and it is with that experience, in addition to the extensive training, provided by The Dr. Rachael Institute that has prepared me to serve people and change lives.
+                    <p class="lead mb-4">A Sexologist and Certified Clinical Sexuality Coach that comes from a background in, believe or not, Criminal Justice! As a State Criminal Investigator, it was my responsibility to get to the bottom of what was really going on when attempting to solve a case. I sometimes had to ask the hard questions, and it is with that experience, in addition to the extensive training, provided by The Dr. Rachael Institute that has prepared me to serve people and change lives.
                         <br>My purpose is to empower men and women to exert control over their sexual outcomes by embracing their sexuality and transforming their relationships into one that is positive and healthy.
                     </p>
                     <!--
@@ -74,9 +74,9 @@
                 </div>
                 <div class="col-lg-6 mb-4">
                     <ul class="lead">
-                        <li>Do you need more full-filling sex in your relationship?</li>
+                        <li>Do you need more satisfying sex in your relationship?</li>
                         <li>Do you desire to have better communication with your partner which will lead to stronger intimacy?</li>
-                        <li>Would you like to learn about sexual aids and toys to spice up the bedroom?</li>
+                        <li>Would you like to learn about sexual aids and toys?</li>
                         <li>Would you like to know how to nurture intimacy in the relationship?</li>
                     </ul>
                 </div>
